@@ -285,7 +285,7 @@ public:
 	int get_face_shapenum() const	// Get "portrait" shape #.
 		{ return face_num; }	// It's the NPC's #.
 	int get_usecode() const
-		{ return usecode == -1 ? get_shapenum() : usecode; }
+		{ return usecode == -1 ? Game_object::get_usecode() : usecode; }
 	Schedule *get_schedule() const
 		{ return schedule; }
 	int get_frame_time() const	// Return frame time if moving.
